# my_printf

./: CMakeLists.txt  Makefile  README.md  check.sh  find_operation.c  ft_printf.c  ft_printf.h  ft_utoa.c  implement_operatios.c  libft.h  main.c  my_res.txt  one_to_two.c  print_naked_line.c  some_common_fun.c  writing_specifier.c
headers/: ev_y_need_printf.h  ft_printf.h  libft.h
libft/: Makefile  README.md  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_itoa.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_utoa.c  libft.h
src/: find_operation.c  ft_printf.c  implement_operation_sts.c  implement_operatios.c  print_naked_line.c  some_common_fun.c  sstuff_hex.c  star_processing.c  writing_c_arg.c  writing_hex_arg.c  writing_int_arg.c  writing_s_arg.c  writing_specifier.c
